fix cube on mobile

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -31,4 +31,4 @@ body {
     background-color: black;
 }
 
-$desktop: 768px;
+$desktop: 328px;
