--- a/src/scss/blocks/_d.scss
+++ b/src/scss/blocks/_d.scss
@@ -67,10 +67,7 @@
             transform: rotateY(0) translateZ(-40vw);
             width: 100%;
             height: 100%;
-            pointer-events: auto; // border-top: 15px solid transparent;
-            // border-bottom: 15px solid transparent;
-            // border-left: 15px solid transparent;
-            // border-right: 15px solid transparent;
+            pointer-events: auto;
         }
         &__cube-face\--left {
             transform: rotateY(-90deg) translateZ(50vw);
@@ -81,13 +78,13 @@
             border-bottom: 15px solid transparent;
         }
         &__cube-face\--top {
-            transform: rotateX( 90deg) translateZ(50vh);
+            transform: rotateX( 90deg) translateZ(calc(var(--vh, 1vh) * 50));
             width: 100%;
             height: 80vw;
             top: calc(50% - 40vw);
         }
         &__cube-face\--bottom {
-            transform: rotateX(-90deg) translateZ(50vh);
+            transform: rotateX(-90deg) translateZ(calc(var(--vh, 1vh) * 50));
             width: 100%;
             height: 80vw;
             top: calc(50% - 40vw);
